@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-06T16:19:26Z",
-  "count_outdated" : 433,
-  "uniques_outdated" : 250,
-  "count" : 471,
-  "uniques" : 269,
+  "timestamp" : "2022-08-07T01:28:15Z",
+  "count_outdated" : 436,
+  "uniques_outdated" : 252,
+  "count" : 474,
+  "uniques" : 270,
   "clones" : [
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 2,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-08-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
