@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-08-06T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
